# osgEarthBuilder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.adoc  dummy.c
patches/: osg.diff  osgearth.diff  osgqt.diff  proj.diff  sqlite3.diff
